Bug 391996 - If another "Default icon size" is set: the change is not applied until the user e.g. switches the viewmode (Brief/Detailed)
Summary: If another "Default icon size" is set: the change is not applied until the us...
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Davide Gianforte
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-18 13:03 UTC by liukai
Modified: 2020-05-09 15:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
krusader 2.6.0 in Kubuntu 17.10, config ,setting the file list icon size. (388.85 KB, image/png)
2018-03-18 13:03 UTC, liukai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description liukai 2018-03-18 13:03:26 UTC
Created attachment 111478 [details]
krusader 2.6.0 in Kubuntu 17.10, config ,setting the file list icon size.

krusader config , after setted filelist icon size ,  user must switch viewmode (Brief/Detail) then krusader does.
Comment 1 Toni Asensi Esteve 2018-03-18 18:17:16 UTC
In other words: if you configure Krusader to use another "Default icon size" in the "Detailed View"... the change is not applied until you e.g. switch the viewmode to "Brief View", and you switch back the viewmode to "Detailed View".
Comment 2 liukai 2018-03-19 08:05:28 UTC
(In reply to Toni Asensi Esteve from comment #1)
> In other words: if you configure Krusader to use another "Default icon size"
> in the "Detailed View"... the change is not applied until you e.g. switch
> the viewmode to "Brief View", and you switch back the viewmode to "Detailed
> View".

Yes ,My mean as your said.
Comment 3 Davide Gianforte 2019-07-13 18:11:35 UTC
There is already the method KrView::setFileIconSize, the point is: when to use it? I have a little knowledge of Konfigurator and KConfig related things.

The resize must be invoked only when the icon size is really changed, and we have two types of view (brief/detailed). I don't know if a bare cycle is the right solution.
Comment 4 Davide Gianforte 2020-05-09 15:19:18 UTC
Git commit fca9e0fe4ccbfd15b3f13659e4f07fb517e7927c by Davide Gianforte.
Committed on 09/05/2020 at 15:18.
Pushed by gengisdave into branch 'master'.

Update icon size after the user changed it on Konfigurator

When the user changes the icon size (brief or detailed view) on Konfigurator, all panels are not update. Krusader has to be restarted or the user must change view mode.

This patch force icon size after it was changed in Konfigurator.

FIXED: [ 391996 ] krusader config , after setted filelist icon size , user must switch viewmode (Brief/Detail) then krusader does.

Differential Revision: https://phabricator.kde.org/D29453

M  +18   -0    krusader/Konfigurator/kgpanel.cpp
M  +1    -0    krusader/Konfigurator/kgpanel.h
M  +2    -0    krusader/panelmanager.cpp

https://commits.kde.org/krusader/fca9e0fe4ccbfd15b3f13659e4f07fb517e7927c