Update icon size after the user changed it on Konfigurator

When the user changes the icon size (brief or detailed view) on Konfigurator, all panels are not update. Krusader has to be restarted or the user must change view mode.

This patch force icon size after it was changed in Konfigurator.

FIXED: [ 391996 ] krusader config , after setted filelist icon size , user must switch viewmode (Brief/Detail) then krusader does.
BUG: 391996

Differential Revision: https://phabricator.kde.org/D29453